# sas_kuka_control_template

./: CMakeLists.txt  README.md  package.xml
.devel/robot_and_simulation_demo/: compose.yml
.devel/robot_demo/: compose.yml
.devel/sas_kuka_control_template/: Dockerfile
.devel/scripts/: run_real_robot.sh  run_simulation.sh
.devel/simulation_demo/: compose.yml
docker/gazebo/: compose.yml
docker/gazebo/simulation_demo/: compose.yml
docker/robot_and_simulation_demo/: compose.yml
docker/robot_and_simulation_v2_demo/: compose.yml
docker/robot_demo/: compose.yml
docker/sas_kuka_control_template/: Dockerfile
docker/scripts/: prepare_robot_demo.sh
docker/simulation_demo/: compose.yml
docker/simulation_demo_v2/: compose.yml
launch/: _coppeliasim_composition.py  _coppeliasim_launch.py  compose_with_coppeliasim_launch.py  dummy_move_in_coppeliasim_example_launch.py  dummy_with_coppeliasim_launch.py  real_robot_move_example_py_launch.py  robot_and_simulation_example_py_launch.py  robot_and_simulation_v2_example_py_launch.py  robot_example_py_launch.py  simulation_example_py_launch.py  simulation_v2_example_py_launch.py  simulation_v2_kinematic_control_py_launch.py
sas_kuka_control_template/: kinematics.py
scenes/: KUKAR820_4100rev0.ttt  KUKAR820_4100rev0_sas.ttt
scripts/: joint_interface_example.py  kinematic_control.py
